# fast_zero

./: .env.example  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  local.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 2f7dff124591_create_users_table.py  3fbc124bc6a0_add_created_at_and_updated_at_in_todos_.py  f87743c45052_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_local.py  test_security.py  test_todos.py  test_users.py
